[package]
name = "collide_tree"
version = "0.1.1"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"
readme ="readme.md"
keywords= ["collision" ,"detect","tree","hit"]
license = "MIT"
description = "A test for colliding many objects that runs at O(n*lg(n)) and can be used at any number of dimensions"
repository ="https://github.com/storyfeet/collide_tree" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
rand = "0.7.3"

[lib]
name="collide_tree"
path="src/lib.rs"


[[bin]]
name = "benchmarks"
path= "src/my_benchmark.rs"
